# serializer version: 1
# name: test_the_card_renders_what_it_rendered_before[charging-i5]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:ev-station">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Charging history</span>
              <span class="chead__sub">Car</span>
            </div>
            
        <div class="xbar">
          <button class="xbtn" data-export="csv" data-kind="charging"
                  title="Download this month as a spreadsheet">
            <ha-icon icon="mdi:file-delimited-outline">
  </ha-icon>CSV
          </button>
          <button class="xbtn" data-export="html" data-kind="both"
                  title="Open a printable month report (print it to get a PDF)">
            <ha-icon icon="mdi:file-document-outline">
  </ha-icon>Report
          </button>
        </div>
          </div>
          
        <div class="mnav">
          <button class="mnav__btn" data-month-kind="charging" data-month-step="-1"
                  title="Previous month" aria-label="Previous month">
            <ha-icon icon="mdi:chevron-left">
  </ha-icon>
          </button>
          <span class="mnav__label">September 2026</span>
          <button class="mnav__btn" data-month-kind="charging" data-month-step="1"
                  title="Next month" aria-label="Next month"
                  disabled>
            <ha-icon icon="mdi:chevron-right">
  </ha-icon>
          </button>
        </div>
          
          <div class="empty">Loading charging history…</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[charging-m2]
  '''
  <ha-card>
          <div class="msg">
            <ha-icon icon="mdi:car-off">
  </ha-icon>
            <div class="msg__title">Nothing to show for this car</div>
            <div class="msg__body">Car runs on fuel alone, so there is no charging, battery health or electric range to show. If it does plug in, set Drivetrain in the card editor.</div>
          </div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[charging-mini]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:ev-station">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Charging history</span>
              <span class="chead__sub">Car</span>
            </div>
            
        <div class="xbar">
          <button class="xbtn" data-export="csv" data-kind="charging"
                  title="Download this month as a spreadsheet">
            <ha-icon icon="mdi:file-delimited-outline">
  </ha-icon>CSV
          </button>
          <button class="xbtn" data-export="html" data-kind="both"
                  title="Open a printable month report (print it to get a PDF)">
            <ha-icon icon="mdi:file-document-outline">
  </ha-icon>Report
          </button>
        </div>
          </div>
          
        <div class="mnav">
          <button class="mnav__btn" data-month-kind="charging" data-month-step="-1"
                  title="Previous month" aria-label="Previous month">
            <ha-icon icon="mdi:chevron-left">
  </ha-icon>
          </button>
          <span class="mnav__label">September 2026</span>
          <button class="mnav__btn" data-month-kind="charging" data-month-step="1"
                  title="Next month" aria-label="Next month"
                  disabled>
            <ha-icon icon="mdi:chevron-right">
  </ha-icon>
          </button>
        </div>
          
          <div class="empty">Loading charging history…</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[charging-phev]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:ev-station">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Charging history</span>
              <span class="chead__sub">Car</span>
            </div>
            
        <div class="xbar">
          <button class="xbtn" data-export="csv" data-kind="charging"
                  title="Download this month as a spreadsheet">
            <ha-icon icon="mdi:file-delimited-outline">
  </ha-icon>CSV
          </button>
          <button class="xbtn" data-export="html" data-kind="both"
                  title="Open a printable month report (print it to get a PDF)">
            <ha-icon icon="mdi:file-document-outline">
  </ha-icon>Report
          </button>
        </div>
          </div>
          
        <div class="mnav">
          <button class="mnav__btn" data-month-kind="charging" data-month-step="-1"
                  title="Previous month" aria-label="Previous month">
            <ha-icon icon="mdi:chevron-left">
  </ha-icon>
          </button>
          <span class="mnav__label">September 2026</span>
          <button class="mnav__btn" data-month-kind="charging" data-month-step="1"
                  title="Next month" aria-label="Next month"
                  disabled>
            <ha-icon icon="mdi:chevron-right">
  </ha-icon>
          </button>
        </div>
          
          <div class="empty">Loading charging history…</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-closures-i5]
  '''
  <ha-card>
            
        <div class="chead">
          <ha-icon icon="mdi:car-door-lock">
  </ha-icon>
          <div class="chead__text">
            <span class="chead__title">Security & closures</span>
            <span class="chead__sub">Car</span>
          </div>
          
        </div>
            <div class="empty">No door, window or security data for this vehicle yet. Enable the Vehicle status cluster in the integration options.</div>
          </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-closures-m2]
  '''
  <ha-card>
            
        <div class="chead">
          <ha-icon icon="mdi:car-door-lock">
  </ha-icon>
          <div class="chead__text">
            <span class="chead__title">Security & closures</span>
            <span class="chead__sub">Car</span>
          </div>
          
        </div>
            <div class="empty">No door, window or security data for this vehicle yet. Enable the Vehicle status cluster in the integration options.</div>
          </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-closures-mini]
  '''
  <ha-card>
          
        <div class="chead">
          <ha-icon icon="mdi:car-door-lock">
  </ha-icon>
          <div class="chead__text">
            <span class="chead__title">Security & closures</span>
            <span class="chead__sub">Car</span>
          </div>
          <span class="tstat" style="--c:var(--bmw-high)">
  <span class="tstat__dot">
  </span>All closed</span>
        </div>
          <div class="closcar">
        <svg class="carsvg" viewBox="0 0 948 1659" xmlns="http://www.w3.org/2000/svg">
          
          <defs>
            <linearGradient id="carBody" x1="0" y1="0" x2="1" y2="0">
              <stop offset="0" stop-color="#bcc2ca"/>
              <stop offset=".5" stop-color="#dde1e6"/>
              <stop offset="1" stop-color="#bcc2ca"/>
            </linearGradient>
            <linearGradient id="carRoof" x1="0" y1="0" x2="1" y2="0">
              <stop offset="0" stop-color="#7c828b"/>
              <stop offset=".5" stop-color="#969ca4"/>
              <stop offset="1" stop-color="#7c828b"/>
            </linearGradient>
            <linearGradient id="carGlass" x1="0" y1="0" x2=".4" y2="1">
              <stop offset="0" stop-color="#43515f"/>
              <stop offset="1" stop-color="#26313c"/>
            </linearGradient>
            <linearGradient id="carTail" x1="0" y1="0" x2="1" y2="1">
              <stop offset="0" stop-color="#8e1b17"/>
              <stop offset=".6" stop-color="#e4382b"/>
              <stop offset="1" stop-color="#ff7a5c"/>
            </linearGradient>
            <filter id="carGlow" x="-30%" y="-30%" width="160%" height="160%">
              <feGaussianBlur in="SourceGraphic" stdDeviation="12" result="b"/>
              <feMerge>
  <feMergeNode in="b"/>
  <feMergeNode in="SourceGraphic"/>
  </feMerge>
            </filter>
            <clipPath id="carClipWs">
  <path d="M474 386 C578 386 648 402 704 446 L668 606 C600 597 348 597 280 606 L244 446 C300 402 370 386 474 386 Z"/>
  </clipPath>
  <clipPath id="carClipRw">
  <path d="M298 1190 C400 1182 548 1182 650 1190 L684 1388 C600 1426 348 1426 264 1388 Z"/>
  </clipPath>
  <clipPath id="carClipSr">
  <path d="M358 712 H590 Q598 712 598 720 V1038 Q598 1046 590 1046 H358 Q348 1046 348 1038 V720 Q348 712 358 712 Z"/>
  </clipPath>
  <clipPath id="carClipWf">
  <path d="M221 474 C244 520 272 620 284 720 L288 806 L211 806 L211 620 C212 560 215 512 221 474 Z"/>
  </clipPath>
  <clipPath id="carClipWr">
  <path d="M211 834 L289 834 L289 1040 C286 1130 262 1210 230 1268 L220 1268 C214 1150 211 1000 211 834 Z"/>
  </clipPath>
          </defs>
          <rect x="158" y="195" width="27" height="200" rx="13" class="carsvg__wheel"/>
  <rect x="158" y="195" width="27" height="200" rx="13" class="carsvg__wheel" transform="matrix(-1 0 0 1 948 0)"/>
  <rect x="150" y="1255" width="27" height="206" rx="13" class="carsvg__wheel"/>
  <rect x="150" y="1255" width="27" height="206" rx="13" class="carsvg__wheel" transform="matrix(-1 0 0 1 948 0)"/>
          
          <path d="M222 496 C198 504 166 522 151 538 C144 547 147 561 158 563 C180 557 206 549 222 546 Z" class="carsvg__mirror"/>
  <path d="M222 496 C198 504 166 522 151 538 C144 547 147 561 158 563 C180 557 206 549 222 546 Z" class="carsvg__mirror" transform="matrix(-1 0 0 1 948 0)"/>
          <path d="M474 12 C420 12 386 16 366 25 C300 52 228 104 202 150 C186 178 180 205 179 245 L177 1120 C176 1180 171 1225 168 1270 L168 1440 C170 1458 176 1474 181 1495 C190 1545 214 1592 258 1620 C318 1644 420 1648 474 1648 C528 1648 630 1644 690 1620 C734 1592 758 1545 767 1495 C772 1474 778 1458 780 1440 L780 1270 C777 1225 772 1180 771 1120 L769 245 C768 205 762 178 746 150 C720 104 648 52 582 25 C562 16 528 12 474 12 Z" class="carsvg__body"/>
          <path d="M178 466 L222 466 C250 530 280 640 292 760 L294 818 L178 818 Z" class="carsvg__shut"/>
  <path d="M178 466 L222 466 C250 530 280 640 292 760 L294 818 L178 818 Z" class="carsvg__shut" transform="matrix(-1 0 0 1 948 0)"/>
          <path d="M178 822 L294 822 L294 1040 C291 1110 274 1160 254 1186 L177 1186 Z" class="carsvg__shut"/>
  <path d="M178 822 L294 822 L294 1040 C291 1110 274 1160 254 1186 L177 1186 Z" class="carsvg__shut" transform="matrix(-1 0 0 1 948 0)"/>
          <path d="M330 54 C400 46 548 46 618 54 C676 120 708 260 712 432 C640 398 560 380 474 380 C388 380 308 398 236 432 C240 260 272 120 330 54 Z" class="carsvg__hood"/>
          <path d="M392 56 C356 160 330 280 318 392 M556 56 C592 160 618 280 630 392" class="carsvg__crease"/>
          <path d="M262 1402 C348 1436 600 1436 686 1402 L693 1512 C600 1532 348 1532 255 1512 Z" class="carsvg__shut"/>
          <path d="M178 820 L212 820 M179 466 L220 466 M177 1186 L232 1186 M255 1512 L262 1574 C380 1594 568 1594 686 1574 L693 1512" class="carsvg__shut"/>
  <path d="M178 820 L212 820 M179 466 L220 466 M177 1186 L232 1186 M255 1512 L262 1574 C380 1594 568 1594 686 1574 L693 1512" class="carsvg__shut" transform="matrix(-1 0 0 1 948 0)"/>
          <g>
  <rect x="181" y="704" width="7" height="44" rx="3.5" class="carsvg__handle"/>
  <rect x="181" y="1004" width="7" height="44" rx="3.5" class="carsvg__handle"/>
  </g>
  <g transform="matrix(-1 0 0 1 948 0)">
  <rect x="181" y="704" width="7" height="44" rx="3.5" class="carsvg__handle"/>
  <rect x="181" y="1004" width="7" height="44" rx="3.5" class="carsvg__handle"/>
  </g>
          <path d="M338 50 C292 70 240 112 204 170 L213 174 C248 124 296 84 342 59 Z" class="carsvg__light"/>
  <path d="M338 50 C292 70 240 112 204 170 L213 174 C248 124 296 84 342 59 Z" class="carsvg__light" transform="matrix(-1 0 0 1 948 0)"/>
          <path d="M334 56 C292 76 246 114 210 168" class="carsvg__drl"/>
  <path d="M334 56 C292 76 246 114 210 168" class="carsvg__drl" transform="matrix(-1 0 0 1 948 0)"/>
          <path d="M197 1460 C203 1503 230 1538 288 1553 L346 1559 C352 1561 352 1569 346 1570 L284 1568 C220 1556 194 1518 189 1470 C189 1462 195 1456 197 1460 Z" class="carsvg__tail"/>
  <path d="M197 1460 C203 1503 230 1538 288 1553 L346 1559 C352 1561 352 1569 346 1570 L284 1568 C220 1556 194 1518 189 1470 C189 1462 195 1456 197 1460 Z" class="carsvg__tail" transform="matrix(-1 0 0 1 948 0)"/>
          <path d="M195 1472 C202 1512 228 1545 292 1560 L340 1564" class="carsvg__tailcore"/>
  <path d="M195 1472 C202 1512 228 1545 292 1560 L340 1564" class="carsvg__tailcore" transform="matrix(-1 0 0 1 948 0)"/>
          <g>
  <rect x="366" y="12" width="104" height="38" rx="16" class="carsvg__chrome"/>
  <rect x="371" y="17" width="94" height="28" rx="12" class="carsvg__kidney"/>
  <path d="M382 21 V43 M393 21 V43 M404 21 V43 M415 21 V43 M426 21 V43 M437 21 V43 M448 21 V43 M459 21 V43" class="carsvg__kbar"/>
  </g>
  <g transform="matrix(-1 0 0 1 948 0)">
  <rect x="366" y="12" width="104" height="38" rx="16" class="carsvg__chrome"/>
  <rect x="371" y="17" width="94" height="28" rx="12" class="carsvg__kidney"/>
  <path d="M382 21 V43 M393 21 V43 M404 21 V43 M415 21 V43 M426 21 V43 M437 21 V43 M448 21 V43 M459 21 V43" class="carsvg__kbar"/>
  </g>
          <path d="M474 386 C578 386 648 402 704 446 L668 606 C600 597 348 597 280 606 L244 446 C300 402 370 386 474 386 Z" class="carsvg__glass carsvg__frame"/>
          <path d="M284 614 C380 604 568 604 664 614 C650 720 648 1000 652 1186 C560 1177 388 1177 296 1186 C300 1000 298 720 284 614 Z" class="carsvg__roof"/>
          <path d="M358 712 H590 Q598 712 598 720 V1038 Q598 1046 590 1046 H358 Q348 1046 348 1038 V720 Q348 712 358 712 Z" class="carsvg__glass"/>
          <path d="M221 474 C244 520 272 620 284 720 L288 806 L211 806 L211 620 C212 560 215 512 221 474 Z" class="carsvg__glass"/>
  <path d="M221 474 C244 520 272 620 284 720 L288 806 L211 806 L211 620 C212 560 215 512 221 474 Z" class="carsvg__glass" transform="matrix(-1 0 0 1 948 0)"/>
          <path d="M211 834 L289 834 L289 1040 C286 1130 262 1210 230 1268 L220 1268 C214 1150 211 1000 211 834 Z" class="carsvg__glass"/>
  <path d="M211 834 L289 834 L289 1040 C286 1130 262 1210 230 1268 L220 1268 C214 1150 211 1000 211 834 Z" class="carsvg__glass" transform="matrix(-1 0 0 1 948 0)"/>
          <path d="M298 1190 C400 1182 548 1182 650 1190 L684 1388 C600 1426 348 1426 264 1388 Z" class="carsvg__glass carsvg__frame"/>
          <path d="M211 806 L288 806 L289 834 L211 834 Z" class="carsvg__pillar"/>
  <path d="M211 806 L288 806 L289 834 L211 834 Z" class="carsvg__pillar" transform="matrix(-1 0 0 1 948 0)"/>
          <path d="M560 370 L650 370 L440 620 L350 620 Z" class="carsvg__sheen" clip-path="url(#carClipWs)"/>
  <path d="M670 370 L700 370 L500 620 L470 620 Z" class="carsvg__sheen" clip-path="url(#carClipWs)"/>
  <path d="M530 1170 L600 1170 L420 1440 L350 1440 Z" class="carsvg__sheen" clip-path="url(#carClipRw)"/>
  <path d="M520 700 L572 700 L420 1060 L368 1060 Z" class="carsvg__sheen" clip-path="url(#carClipSr)"/>
          <path d="M330 54 C400 46 548 46 618 54 C676 120 708 260 712 432 C640 398 560 380 474 380 C388 380 308 398 236 432 C240 260 272 120 330 54 Z" class="cldiag__hit" data-entity="sensor.mini_hood"/>
          <path d="M262 1402 C348 1436 600 1436 686 1402 L693 1512 C600 1532 348 1532 255 1512 Z" class="cldiag__hit" data-entity="sensor.mini_trunk"/>
          <path d="M221 474 C244 520 272 620 284 720 L288 806 L211 806 L211 620 C212 560 215 512 221 474 Z" class="cldiag__hit" data-entity="sensor.mini_window"/>
          <path d="M358 712 H590 Q598 712 598 720 V1038 Q598 1046 590 1046 H358 Q348 1046 348 1038 V720 Q348 712 358 712 Z" class="cldiag__hit" data-entity="sensor.mini_sunroof"/>
          <g class="cldiag__lock" data-entity="sensor.mini_doors" style="--c:var(--divider-color)">
             <path d="M447 880 V850 a27 27 0 0 1 54 0" class="cldiag__shackle"/>
             <rect x="422" y="880" width="104" height="76" rx="14" class="cldiag__lockbody"/>
           </g>
        </svg>
  </div>
          <div class="list">
            <button class="item" data-entity="sensor.mini_doors">
                  <span class="item__name" title="Central lock">
  <span class="item__dot" style="background:var(--divider-color)">
  </span>Central lock</span>
                  <span class="item__val" style="color:var(--divider-color)">closed</span>
                </button>
  <button class="item" data-entity="sensor.mini_alarm">
                  <span class="item__name" title="Anti-theft alarm">
  <span class="item__dot" style="background:var(--divider-color)">
  </span>Anti-theft alarm</span>
                  <span class="item__val" style="color:var(--divider-color)">—</span>
                </button>
  <button class="item" data-entity="">
                  <span class="item__name" title="All closed">
  <span class="item__dot" style="background:var(--bmw-high)">
  </span>All closed</span>
                  <span class="item__val" style="color:var(--bmw-high)">✓</span>
                </button>
          </div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-closures-phev]
  '''
  <ha-card>
            
        <div class="chead">
          <ha-icon icon="mdi:car-door-lock">
  </ha-icon>
          <div class="chead__text">
            <span class="chead__title">Security & closures</span>
            <span class="chead__sub">Car</span>
          </div>
          
        </div>
            <div class="empty">No door, window or security data for this vehicle yet. Enable the Vehicle status cluster in the integration options.</div>
          </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-electric-i5]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:lightning-bolt">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Electric vehicle</span>
              <span class="chead__sub">Car · 0 values</span>
            </div>
          </div>
          
          <div class="empty">No <b>Electric vehicle</b> entities for this vehicle. Enable the cluster in the integration options.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-electric-m2]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:lightning-bolt">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Electric vehicle</span>
              <span class="chead__sub">Car · 0 values</span>
            </div>
          </div>
          
          <div class="empty">No <b>Electric vehicle</b> entities for this vehicle. Enable the cluster in the integration options.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-electric-mini]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:lightning-bolt">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Electric vehicle</span>
              <span class="chead__sub">Car · 0 values</span>
            </div>
          </div>
          
          <div class="empty">No <b>Electric vehicle</b> entities for this vehicle. Enable the cluster in the integration options.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-electric-phev]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:lightning-bolt">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Electric vehicle</span>
              <span class="chead__sub">Car · 0 values</span>
            </div>
          </div>
          
          <div class="empty">No <b>Electric vehicle</b> entities for this vehicle. Enable the cluster in the integration options.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-tire-i5]
  '''
  <ha-card>
            
        <div class="chead">
          <ha-icon icon="mdi:car-tire-alert">
  </ha-icon>
          <div class="chead__text">
            <span class="chead__title">Tires</span>
            <span class="chead__sub">Car</span>
          </div>
          <span class="tstat" style="--c:var(--secondary-text-color)">
  <span class="tstat__dot">
  </span>—</span>
        </div>
            <div class="empty">No tire data for this vehicle yet. Enable the Tire data cluster and drive to populate readings.</div>
          </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-tire-m2]
  '''
  <ha-card>
            
        <div class="chead">
          <ha-icon icon="mdi:car-tire-alert">
  </ha-icon>
          <div class="chead__text">
            <span class="chead__title">Tires</span>
            <span class="chead__sub">Car</span>
          </div>
          <span class="tstat" style="--c:var(--secondary-text-color)">
  <span class="tstat__dot">
  </span>—</span>
        </div>
            <div class="empty">No tire data for this vehicle yet. Enable the Tire data cluster and drive to populate readings.</div>
          </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-tire-mini]
  '''
  <ha-card>
            
        <div class="chead">
          <ha-icon icon="mdi:car-tire-alert">
  </ha-icon>
          <div class="chead__text">
            <span class="chead__title">Tires</span>
            <span class="chead__sub">Car</span>
          </div>
          <span class="tstat" style="--c:var(--secondary-text-color)">
  <span class="tstat__dot">
  </span>—</span>
        </div>
            <div class="empty">No tire data for this vehicle yet. Enable the Tire data cluster and drive to populate readings.</div>
          </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[cluster-tire-phev]
  '''
  <ha-card>
            
        <div class="chead">
          <ha-icon icon="mdi:car-tire-alert">
  </ha-icon>
          <div class="chead__text">
            <span class="chead__title">Tires</span>
            <span class="chead__sub">Car</span>
          </div>
          <span class="tstat" style="--c:var(--secondary-text-color)">
  <span class="tstat__dot">
  </span>—</span>
        </div>
            <div class="empty">No tire data for this vehicle yet. Enable the Tire data cluster and drive to populate readings.</div>
          </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[efficiency-i5]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:map-marker-distance">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Efficiency &amp; range</span>
              <span class="chead__sub">Car</span>
            </div>
          </div>
          <div class="empty">Working out your real range…</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[efficiency-m2]
  '''
  <ha-card>
          <div class="msg">
            <ha-icon icon="mdi:car-off">
  </ha-icon>
            <div class="msg__title">Nothing to show for this car</div>
            <div class="msg__body">Car runs on fuel alone, so there is no charging, battery health or electric range to show. If it does plug in, set Drivetrain in the card editor.</div>
          </div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[efficiency-mini]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:map-marker-distance">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Efficiency &amp; range</span>
              <span class="chead__sub">Car</span>
            </div>
          </div>
          <div class="empty">Working out your real range…</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[efficiency-phev]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:map-marker-distance">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Efficiency &amp; range</span>
              <span class="chead__sub">Car</span>
            </div>
          </div>
          <div class="empty">Working out your real range…</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[health-i5]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:battery-heart-variant">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Battery health</span>
              <span class="chead__sub">Car</span>
            </div>
          </div>
          <div class="empty">No battery-health data yet. Once the car logs a few wide-range charges, its usable capacity appears here.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[health-m2]
  '''
  <ha-card>
          <div class="msg">
            <ha-icon icon="mdi:car-off">
  </ha-icon>
            <div class="msg__title">Nothing to show for this car</div>
            <div class="msg__body">Car runs on fuel alone, so there is no charging, battery health or electric range to show. If it does plug in, set Drivetrain in the card editor.</div>
          </div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[health-mini]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:battery-heart-variant">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Battery health</span>
              <span class="chead__sub">Car</span>
            </div>
          </div>
          <div class="empty">No battery-health data yet. Once the car logs a few wide-range charges, its usable capacity appears here.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[health-phev]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:battery-heart-variant">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Battery health</span>
              <span class="chead__sub">Car</span>
            </div>
          </div>
          <div class="empty">No battery-health data yet. Once the car logs a few wide-range charges, its usable capacity appears here.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[map-i5]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:map-marker-multiple">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Trip map</span>
              <span class="chead__sub">Car</span>
            </div>
          </div>
          <div class="empty">The map couldn't be loaded in this browser.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[map-m2]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:map-marker-multiple">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Trip map</span>
              <span class="chead__sub">Car</span>
            </div>
          </div>
          <div class="empty">The map couldn't be loaded in this browser.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[map-mini]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:map-marker-multiple">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Trip map</span>
              <span class="chead__sub">Car</span>
            </div>
          </div>
          <div class="empty">The map couldn't be loaded in this browser.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[map-phev]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:map-marker-multiple">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Trip map</span>
              <span class="chead__sub">Car</span>
            </div>
          </div>
          <div class="empty">The map couldn't be loaded in this browser.</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[overview-i5]
  '''
  <ha-card>
          <div class="hero hero--empty">
            <ha-icon class="hero__placeholder" icon="mdi:car-electric">
  </ha-icon>
            <div class="hero__scrim">
  </div>
            <div class="hero__top">
              <div class="hero__name" title="Car">Car</div>
              <div class="pill" title="Last update">
  <span class="dot dot--stale">
  </span>21 h ago</div>
            </div>
            
          </div>
  
          <div class="band">
            <button class="gauge" data-entity="sensor.i5_soc" aria-label="charge">
              <div class="gauge__ring" style="--pct:72;--ring:var(--bmw-high)">
                <div class="gauge__hole">
                  <span class="gauge__val">72<i>%</i>
  </span>
                  <span class="gauge__cap">charge</span>
                </div>
              </div>
              
            </button>
  
            <div class="lead">
              
              <button class="lead__row" data-entity="sensor.i5_range">
                <ha-icon icon="mdi:map-marker-distance">
  </ha-icon>
                <span class="lead__val">379 km</span>
                <span class="lead__lbl">remaining range</span>
              </button>
              <button class="lead__row" data-entity="sensor.i5_charging">
                <ha-icon icon="mdi:ev-station">
  </ha-icon>
                <span class="lead__val">nocharging</span>
                <span class="lead__lbl">charging status</span>
              </button>
            </div>
          </div>
  
          <div class="grid">
                  
                    <button class="cell" data-entity="sensor.i5_target">
                      <ha-icon icon="mdi:target">
  </ha-icon>
                      <div class="cell__body">
                        <span class="cell__val">0 %</span>
                        <span class="cell__lbl">Target</span>
                      </div>
                    </button>
                    <button class="cell" data-entity="sensor.i5_odometer">
                      <ha-icon icon="mdi:counter">
  </ha-icon>
                      <div class="cell__body">
                        <span class="cell__val">41234 km</span>
                        <span class="cell__lbl">Odometer</span>
                      </div>
                    </button>
                </div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[overview-m2]
  '''
  <ha-card>
          <div class="hero hero--empty">
            <ha-icon class="hero__placeholder" icon="mdi:car">
  </ha-icon>
            <div class="hero__scrim">
  </div>
            <div class="hero__top">
              <div class="hero__name" title="Car">Car</div>
              <div class="pill" title="Last update">
  <span class="dot dot--stale">
  </span>21 h ago</div>
            </div>
            
          </div>
  
          <div class="band">
            <button class="gauge" data-entity="sensor.m2_remaining_fuel" aria-label="fuel">
              <div class="gauge__ring" style="--pct:0;--ring:var(--divider-color)">
                <div class="gauge__hole">
                  <span class="gauge__val">38<i>L</i>
  </span>
                  <span class="gauge__cap">fuel</span>
                </div>
              </div>
              
            </button>
  
            <div class="lead">
              
              <button class="lead__row" data-entity="sensor.m2_range">
                <ha-icon icon="mdi:map-marker-distance">
  </ha-icon>
                <span class="lead__val">412 km</span>
                <span class="lead__lbl">remaining range</span>
              </button>
              <button class="lead__row" data-entity="sensor.m2_odometer">
                <ha-icon icon="mdi:counter">
  </ha-icon>
                <span class="lead__val">41234 km</span>
                <span class="lead__lbl">Odometer</span>
              </button>
            </div>
          </div>
  
          
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[overview-mini]
  '''
  <ha-card>
          <div class="hero hero--empty">
            <ha-icon class="hero__placeholder" icon="mdi:car-electric">
  </ha-icon>
            <div class="hero__scrim">
  </div>
            <div class="hero__top">
              <div class="hero__name" title="Car">Car</div>
              <div class="pill" title="Last update">
  <span class="dot dot--stale">
  </span>21 h ago</div>
            </div>
            
          </div>
  
          <div class="band">
            <button class="gauge" data-entity="sensor.mini_range" aria-label="remaining range">
              <div class="gauge__ring" style="--pct:0;--ring:var(--divider-color)">
                <div class="gauge__hole">
                  <span class="gauge__val">233<i>km</i>
  </span>
                  <span class="gauge__cap">remaining range</span>
                </div>
              </div>
              
            </button>
  
            <div class="lead">
              
              <button class="lead__row" data-entity="sensor.mini_odometer">
                <ha-icon icon="mdi:counter">
  </ha-icon>
                <span class="lead__val">41234 km</span>
                <span class="lead__lbl">Odometer</span>
              </button>
            </div>
          </div>
  
          
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[overview-phev]
  '''
  <ha-card>
          <div class="hero hero--empty">
            <ha-icon class="hero__placeholder" icon="mdi:car-electric">
  </ha-icon>
            <div class="hero__scrim">
  </div>
            <div class="hero__top">
              <div class="hero__name" title="Car">Car</div>
              <div class="pill" title="Last update">
  <span class="dot dot--stale">
  </span>21 h ago</div>
            </div>
            
          </div>
  
          <div class="band">
            <button class="gauge" data-entity="sensor.x3_30e_xdrive_battery_hv_state_of_charge" aria-label="charge">
              <div class="gauge__ring" style="--pct:72;--ring:var(--bmw-high)">
                <div class="gauge__hole">
                  <span class="gauge__val">72<i>%</i>
  </span>
                  <span class="gauge__cap">charge</span>
                </div>
              </div>
              
            </button>
  
            <div class="lead">
              
              <button class="lead__row" data-entity="sensor.x3_30e_xdrive_range_ev_remaining_range">
                <ha-icon icon="mdi:map-marker-distance">
  </ha-icon>
                <span class="lead__val">61 km</span>
                <span class="lead__lbl">electric range</span>
              </button>
              <button class="lead__row" data-entity="sensor.x3_30e_xdrive_charging_ev_charging_state">
                <ha-icon icon="mdi:ev-station">
  </ha-icon>
                <span class="lead__val">chargingended</span>
                <span class="lead__lbl">charging status</span>
              </button>
            </div>
          </div>
  
          <div class="grid">
                  
                    <button class="cell" data-entity="sensor.x3_30e_xdrive_range_tank_level">
                      <ha-icon icon="mdi:gas-station">
  </ha-icon>
                      <div class="cell__body">
                        <span class="cell__val">55 %</span>
                        <span class="cell__lbl">Tank</span>
                      </div>
                    </button>
                    <button class="cell" data-entity="sensor.x3_30e_xdrive_range_total_range_last_sent">
                      <ha-icon icon="mdi:map-marker-distance">
  </ha-icon>
                      <div class="cell__body">
                        <span class="cell__val">590 km</span>
                        <span class="cell__lbl">Total range</span>
                      </div>
                    </button>
                    <button class="cell" data-entity="sensor.x3_30e_xdrive_battery_ev_target_state_of_charge">
                      <ha-icon icon="mdi:target">
  </ha-icon>
                      <div class="cell__body">
                        <span class="cell__val">80 %</span>
                        <span class="cell__lbl">Target</span>
                      </div>
                    </button>
                    <button class="cell" data-entity="sensor.x3_30e_xdrive_charging_port_plug_state">
                      <ha-icon icon="mdi:power-plug">
  </ha-icon>
                      <div class="cell__body">
                        <span class="cell__val">connected</span>
                        <span class="cell__lbl">Plug</span>
                      </div>
                    </button>
                    <button class="cell" data-entity="sensor.x3_30e_xdrive_mileage">
                      <ha-icon icon="mdi:counter">
  </ha-icon>
                      <div class="cell__body">
                        <span class="cell__val">41234 km</span>
                        <span class="cell__lbl">Odometer</span>
                      </div>
                    </button>
                </div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[trips-i5]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:road-variant">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Trips</span>
              <span class="chead__sub">Car</span>
            </div>
            
        <div class="xbar">
          <button class="xbtn" data-export="csv" data-kind="trips"
                  title="Download this month as a spreadsheet">
            <ha-icon icon="mdi:file-delimited-outline">
  </ha-icon>CSV
          </button>
          <button class="xbtn" data-export="html" data-kind="both"
                  title="Open a printable month report (print it to get a PDF)">
            <ha-icon icon="mdi:file-document-outline">
  </ha-icon>Report
          </button>
        </div>
          </div>
          
        <div class="mnav">
          <button class="mnav__btn" data-month-kind="trips" data-month-step="-1"
                  title="Previous month" aria-label="Previous month">
            <ha-icon icon="mdi:chevron-left">
  </ha-icon>
          </button>
          <span class="mnav__label">September 2026</span>
          <button class="mnav__btn" data-month-kind="trips" data-month-step="1"
                  title="Next month" aria-label="Next month"
                  disabled>
            <ha-icon icon="mdi:chevron-right">
  </ha-icon>
          </button>
        </div>
          <div class="empty">Loading trips…</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[trips-m2]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:road-variant">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Trips</span>
              <span class="chead__sub">Car</span>
            </div>
            
        <div class="xbar">
          <button class="xbtn" data-export="csv" data-kind="trips"
                  title="Download this month as a spreadsheet">
            <ha-icon icon="mdi:file-delimited-outline">
  </ha-icon>CSV
          </button>
          <button class="xbtn" data-export="html" data-kind="both"
                  title="Open a printable month report (print it to get a PDF)">
            <ha-icon icon="mdi:file-document-outline">
  </ha-icon>Report
          </button>
        </div>
          </div>
          
        <div class="mnav">
          <button class="mnav__btn" data-month-kind="trips" data-month-step="-1"
                  title="Previous month" aria-label="Previous month">
            <ha-icon icon="mdi:chevron-left">
  </ha-icon>
          </button>
          <span class="mnav__label">September 2026</span>
          <button class="mnav__btn" data-month-kind="trips" data-month-step="1"
                  title="Next month" aria-label="Next month"
                  disabled>
            <ha-icon icon="mdi:chevron-right">
  </ha-icon>
          </button>
        </div>
          <div class="empty">Loading trips…</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[trips-mini]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:road-variant">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Trips</span>
              <span class="chead__sub">Car</span>
            </div>
            
        <div class="xbar">
          <button class="xbtn" data-export="csv" data-kind="trips"
                  title="Download this month as a spreadsheet">
            <ha-icon icon="mdi:file-delimited-outline">
  </ha-icon>CSV
          </button>
          <button class="xbtn" data-export="html" data-kind="both"
                  title="Open a printable month report (print it to get a PDF)">
            <ha-icon icon="mdi:file-document-outline">
  </ha-icon>Report
          </button>
        </div>
          </div>
          
        <div class="mnav">
          <button class="mnav__btn" data-month-kind="trips" data-month-step="-1"
                  title="Previous month" aria-label="Previous month">
            <ha-icon icon="mdi:chevron-left">
  </ha-icon>
          </button>
          <span class="mnav__label">September 2026</span>
          <button class="mnav__btn" data-month-kind="trips" data-month-step="1"
                  title="Next month" aria-label="Next month"
                  disabled>
            <ha-icon icon="mdi:chevron-right">
  </ha-icon>
          </button>
        </div>
          <div class="empty">Loading trips…</div>
        </ha-card>
  '''
# ---
# name: test_the_card_renders_what_it_rendered_before[trips-phev]
  '''
  <ha-card>
          <div class="chead">
            <ha-icon icon="mdi:road-variant">
  </ha-icon>
            <div class="chead__text">
              <span class="chead__title">Trips</span>
              <span class="chead__sub">Car</span>
            </div>
            
        <div class="xbar">
          <button class="xbtn" data-export="csv" data-kind="trips"
                  title="Download this month as a spreadsheet">
            <ha-icon icon="mdi:file-delimited-outline">
  </ha-icon>CSV
          </button>
          <button class="xbtn" data-export="html" data-kind="both"
                  title="Open a printable month report (print it to get a PDF)">
            <ha-icon icon="mdi:file-document-outline">
  </ha-icon>Report
          </button>
        </div>
          </div>
          
        <div class="mnav">
          <button class="mnav__btn" data-month-kind="trips" data-month-step="-1"
                  title="Previous month" aria-label="Previous month">
            <ha-icon icon="mdi:chevron-left">
  </ha-icon>
          </button>
          <span class="mnav__label">September 2026</span>
          <button class="mnav__btn" data-month-kind="trips" data-month-step="1"
                  title="Next month" aria-label="Next month"
                  disabled>
            <ha-icon icon="mdi:chevron-right">
  </ha-icon>
          </button>
        </div>
          <div class="empty">Loading trips…</div>
        </ha-card>
  '''
# ---
